<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e5fcf9"
    android:padding="16dp"
    android:weightSum="100"
    tools:context=".SigninActivity">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="35">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="25"
        android:weightSum="25"
        android:layout_marginTop="30dp">
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12"
            android:background="@drawable/edtxt"
            android:hint="@string/email"
            android:ems="10"
            android:textStyle="bold"
            android:gravity="center"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12"
            android:layout_marginTop="10dp"
            android:background="@drawable/edtxt"
            android:hint="@string/password"
            android:ems="10"
            android:textStyle="bold"
            android:gravity="center"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="40"
        android:weightSum="35"
        android:layout_marginTop="30dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="13"
            android:background="@drawable/signinbtn"
            android:text="@string/signin"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="20sp"
            android:onClick="signin"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:onClick="click_signup"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#000"
            android:text="@string/create_account"
             />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="#4d9e4c"
            android:textSize="18sp"
            android:text="@string/password_forget"/>

    </LinearLayout>

</LinearLayout>